--- a/SQLDapperDataAccess/App.config
+++ b/SQLDapperDataAccess/App.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <connectionStrings>
+    <add name="FCCDB" connectionString="Data Source=.;Initial Catalog=FCC;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient"/>
+  </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
